--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,7 @@
 .App {
+
   text-align: center;
+
 }
 
 .App-logo {
@@ -12,7 +14,43 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+h1{
+  letter-spacing: 1.8rem;
+  font-size:4rem;
+}
+p{
+  font-size: 1.5rem;
+  margin: 0;
 
+}
+input{
+  padding: 0.5rem;
+  width: 20rem;
+  margin-bottom: 1rem;
+}
+img{
+  width: 100vh;
+  margin-top: 1rem;
+}
+.form{
+  margin: 6rem;
+}
+
+button{
+  padding: 0.5rem;
+  width: 10rem;
+  margin-top: 2rem;
+  background-color: rgba(255, 255, 255, 0);
+  border: solid 2px white;
+  font-size: 1.6rem;
+  font-family: 'Permanent Marker', cursive;
+  color: ghostwhite;
+  letter-spacing: 0.3rem;
+  
+}
+button:hover{
+  background: rgba(248, 248, 248, 0.137);
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
