--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -24,12 +24,18 @@ p{
 
 }
 input{
-  padding: 0.5rem;
+  padding: 0.6rem;
   width: 20rem;
   margin-bottom: 1rem;
+  background-color: rgba(128, 128, 128, 0);
+  border: 1px solid white;
+  color: white;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 0.9rem;
+
 }
 img{
-  width: 100vh;
+  width: 53rem;
   margin-top: 1rem;
 }
 .form{
