--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
